--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           Shahzod : He looks like gangster, because he want to be a gangster.
         </p>
       </div>
-      <a href="https://github.com/SamandarRikhsiboev/ITC">Githublink</a>
+      <a href="https://samandarrikhsiboev.github.io/ITC/">Githublink of the website</a>
     </section>
   </body>
 </html>
